#113 August 17, 1998
  - in the generated code, added check_error() to the  'if (isInput) read' lines
#114 Dec 27, 1998
  - #include <malloc.h> changed to <stdlib.h>
  - makefile renamed to makefile.in
#115 Jan 25, 1999
  - updated for sim172b: simulation.error() --> simError()
#116 Feb 7, 1999
  - updated for sim174
#117 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
  - removed support for DOS with BC3.1
  - portability change: ebnf.y now includes malloc.h
June 30, 1999
  - ebnf.y ported back from GNED
  - added nedc.ide and b.bat
  - doesn't work yet!
July 10, 1999
  - ebnf.y fixed, nedc works fine again.
July 17, 1999
  - help text changed
Aug 15, 1999
  - bugfix: with "like", simulation crashed if the actual module type didn't
    have all parameters. (Brent's bug)
------ omnetpp-2.0b2 released ------
Dec 5, 1999
  - compiled with MSVC. enbf.h added.
  - added generated files enbf.tab.c and lex.yy.c to CVS to make it possible to
    build GNED where flex/bison is not available
Dec 5,1999
  - Makefile.vc added
Dec 18, 1999
  - changed isA() to className() in generated code (see sim/ChangeLog)
  - macro names in module interface declarations (Interface...End) changed to
    reduce chance of name clashes
Dec 19, 1999
  - changes in generated code due to cPar interface change (see sim/ChangeLog)
Jan 4, 2000
  - corrected '*new cPar = (char *)something' lines in the generated code to
    '*new cPar() = (char *)something', because in the first case, the
    cPar(char *) constructor was called (wrongly) instead of cPar() and
    operator=(char *).
Jan 13, 2000
  - "-s" option (output file suffix) was added
------ omnetpp-2.0b3 released ------
Mar 7, 2000
  - bugfix for distributed execution: corrected handling of machine parameters
    at network level
  - changed test12.ned and test13.ned